--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -27,8 +27,7 @@
         width: 50px;
         height: 50px;
         margin-left: -58px;
-        padding: 5px;
-        padding: 2px;
+        border-width: 2px;
         border-radius: 20%;
     }
 
@@ -58,8 +57,7 @@
         width: 80px;
         height: 80px;
         margin-left: -75px;
-        padding: 8px;
-        padding: 2px;
+        border-width: 2px;
         border-radius: 20%;
     }
 
@@ -93,7 +91,7 @@
         width: 100px;
         height: 100px;
         margin-left: -85px;
-        padding: 2px;
+        border-width: 2px;
         border-radius: 20%;
     }
 }
